apps/mqtt/patch-statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqtt-emqx
  namespace: mqtt
spec:
  template:
    spec:
      containers:
        - name: emqx
