apps/mqtt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqtt-dashboard
  namespace: mqtt
  labels:
    app: emqx
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mqtt.bensonphillips.dev
      secretName: letsencrypt
  rules:
    - host: mqtt.bensonphillips.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mqtt-emqx
                port:
                  number: 18083
